P01/Tests/SyntaxErrors/badtrans1.tm
states 3
I
A -
B +
alphabet 2 0 1
C 0 A 1 R
